# Thoth

./: .clang-format  .clang-tidy  .clangd  .cmake-format.yaml  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CPPLINT.cfg  LICENSE  Makefile  README.md  vcpkg.json
cmake/: ThothVcpkgToolchain.cmake
docs/: BUILDING.md  PDD.md  PRD.md  TASKS.md
include/thoth/: AudioCache.h  AudioContentProvider.h  AudioManager.h  AuthProviderFactory.h  ConfigKey.h  ConfigStore.h  ContentProvider.h  Entity.h  ISentenceScorer.h  ITTSEngine.h  Logger.h  Q_ASRController.h  Q_AudioManager.h  Q_AudioPlayer.h  Q_AudioRecorder.h  Q_GCPVoiceLoader.h  Q_PlaybackController.h  Q_RecordController.h  Q_SessionPlaybackController.h  Q_TTSDownloader.h  Q_UserAudioRecorder.h  Segmenter.h  TTSDownloader.h  TTSEngineFactory.h  TextParser.h  ThothConfig.h  WERScorer.h
scripts/: build.sh  package.sh  setup-macos.sh
src/: main.cpp  qt_main.cpp
src/app/: AppRunner.cpp  AppRunner.h  CMakeLists.txt  Info.plist.in  Q_AppMainWindow.cpp  Q_AppMainWindow.h  main.cpp
src/app/resources/: resources.qrc
src/app/resources/qss/: style.qss
src/app/resources/qss/base/: tokens.qss
src/app/resources/qss/components/: controls.qss  playback.qss
src/app/resources/qss/screens/: main_window.qss
src/app/ui/: HtmlDelegate.h  Q_AppMainWindow.cpp  Q_AppMainWindow.h  Q_PlaybackControlBar.cpp  Q_PlaybackControlBar.h  Q_SettingDialog.cpp  Q_SettingDialog.h  Q_ShadowingBar.cpp  Q_ShadowingBar.h  StyleLoader.h  StyleTokens.h
src/core/: AudioCache.cpp  AudioManager.cpp  Auth.cpp  CMakeLists.txt  Client.cpp  Client.h  ConfigStore.cpp  Entity.cpp  Entity.h  FileExtractor.h  FileExtractors.cpp  Logger.cpp  Q_AudioManager.cpp  Q_GCPTTSDownloader.cpp  Q_GCPTTSDownloader.h  Q_UserAudioRecorder.cpp  Segmenter.h  Segmenters.cpp  TTSDownloader.cpp  TextParser.cpp  TextParser.h  gcp.cpp  gcp.h
src/core/common/: Auth.cpp  ConfigStore.cpp  LockFreeRingBuffer.cpp  Logger.cpp
src/core/controllers/: Q_ASRController.cpp  Q_PlaybackController.cpp  Q_RecordController.cpp  Q_SessionPlaybackController.cpp  Q_UserAudioRecorder.cpp  Q_WhisperWorker.cpp
src/core/entities/: WAV.cpp  WAVHeader.cpp
src/core/internal/: AudioCache.h  FileExtractor.h  GCPTTSEngine.h  InternalEntity.h  LockFreeRingBuffer.h  PiperTTSEngine.h  Q_AudioCapture.h  Q_AudioDecoder.cpp  Q_AudioDecoder.h  Q_AudioStorage.h  Q_GCPTTSDownloader.h  Q_WhisperWorker.h  Segmenter.h  TextParser.h  Timer.h  Utils.h  gcp.h
src/core/services/: AudioCache.cpp  AudioCapture.cpp  AudioContentProvider.cpp  GCP.cpp  GCPTTSEngine.cpp  PiperTTSEngine.cpp  Q_AudioPlayer.cpp  Q_GCPTTSDownloader.cpp  Q_GCPVoiceLoader.cpp  StreamAudioStorage.cpp  TTSEngineFactory.cpp  TextContentProvider.cpp
src/core/utils/: AudioTools.cpp  FileExtractors.cpp  Segmenters.cpp  TextParser.cpp  Timer.cpp  WERScorer.cpp
test/: AudioManagerTest.cpp  CMakeLists.txt  ConfigStoreTest.cpp  GCPRequestTest.cpp  StreamAudioStorageTest.cpp  TestLockFreeRingBuffer.cpp  TestRecordController.cpp  TextContentProviderTest.cpp  TextParserTest.cpp  WAVTest.cpp  WERScorerTest.cpp  test_main.cpp
test/resources/: short_article.txt
